--- a/package.json
+++ b/package.json
@@ -35,22 +35,15 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "chai": "^3.4.1",
-    "co": "^4.5.1",
     "grunt": "0.4.x",
-    "grunt-browserify": "^5.0.0",
     "grunt-cli": "0.1.13",
-    "grunt-concurrent": "1.0.0",
-    "grunt-contrib-copy": "0.8.2",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-jshint": "0.12.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-exec": "0.4.6",
-    "grunt-execute": "0.2.2",
-    "grunt-express-server": "0.4.19",
-    "grunt-istanbul": "^0.6.1",
     "grunt-jasmine-node": "0.2.1",
     "grunt-jasmine-node-coverage": "0.2.0",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-release": "0.13.0",
-    "mocha": "^2.3.4"
+    "grunt-jsdoc": "^2.1.0",
+    "grunt-jsdoc-to-markdown": "^1.2.1",
+    "ink-docstrap": "^1.2.1",
+    "grunt-release": "0.13.0"
   }
 }
